# BridgeDemo

./: CMakeLists.txt  README.md  class_diagram_lib_1.puml  class_diagram_lib_2.puml  main.cpp
lib_1/: AirBus.h  AirTransport.h  Bus.h  CargoPlane.h  ICargoTransportation.h  IPassengerTransportation.h  MotorTransport.h  Transport.h  Truck.h
lib_2/: ATransport.h  AirT.h  CargoTransportation.h  ITypeTransportation.h  MotorT.h  PassengerTransportation.h
